--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server:dev": "nodemon server.js",
-    "seeds": "mongo < ./db/seeds.js",
+    "seeds": "mongo < db/seeds.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
