--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "numeral": "^2.0.6",
+    "numeral-es6": "^1.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
