--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.11",
     "numeral": "^2.0.6",
     "numeral-es6": "^1.0.0",
     "vue": "^2.6.10",
